--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -14,11 +14,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: configure
-      run: ./configure
-
     - name: Install dependencies
-      run: make
+      run: make makefile
 
     - name: Run check
       run: make check
